--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-a
-<body>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="" content="">
+    <title></title>
+  </head>
+  <body>
+    <h1>Nombre</h1>
+    <br>
+    <img src>
+    <hr>
+    <h1>Experiencias</h1>
+    <h1>Educacion</h1>
+    <h1>Conocimientos</h1>
+    <h1>Datos Generales</h1>
+    <h1>Miscelaneo</h1>
+  </body>
+  <footer>
+    <a></a>
+  </footer>
 </html>
