--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
     <img src>
     <hr>
     <h1>Experiencias</h1>
+    <p>
+      He tenido experiencias en...
+    </p>
+    <hr>
     <h1>Educacion</h1>
+    <p>
+      He estudiado en...
+    </p>
+    <hr>
     <h1>Conocimientos</h1>
+    <hr>
     <h1>Datos Generales</h1>
+    <hr>
     <h1>Miscelaneo</h1>
+    <hr>
   </body>
   <footer>
     <a></a>
