--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
-    <title></title>
+    <title>Pagina</title>
   </head>
   <body>
-    <h1>Nombre</h1>
+    <h1>Diego Arroyo</h1>
     <br>
     <img src>
     <hr>
@@ -28,6 +28,8 @@
     <hr>
   </body>
   <footer>
-    <a></a>
+    <p>
+      pe
+    </p>
   </footer>
 </html>
