--- a/index.html
+++ b/index.html
@@ -8,21 +8,39 @@
   <body>
     <h1>Diego Arroyo</h1>
     <br>
-    <img src>
+    <img src ="">
     <hr>
     <h1>Experiencias</h1>
     <p>
       He tenido experiencias en...
+      <ul>
+        <li>Desarrollo de proyecto software Java usando base de datos SQL</li>
+      </ul>
     </p>
     <hr>
     <h1>Educacion</h1>
     <p>
-      He estudiado en...
+      He estudiado en:
+      <ul>
+        <li>Escuela Nuevo Belén</li>
+        <li>Escuela El Buen Pastor Las Mañanitas en Bachillerato de Ciencias</li>
+        <li>Universidad Tecnológica de Panamá estudiando Desarrollo de Software en segundo año</li>
+        
+      </ul>
     </p>
     <hr>
     <h1>Conocimientos</h1>
+    <ul>
+      <li>Documentación general en Microsoft Word/Excel/PowerPoint</li>
+      <li>Edición intermedia de imagenes en Photoshop</li>
+      <li>Edición básica de audio en Audacity</li>
+      <li>Edición básica de videos en Sony Vegas</li>
+    </ul>
     <hr>
     <h1>Datos Generales</h1>
+    <p>
+      Soy una persona yadda yadda.
+    </p>
     <hr>
     <h1>Miscelaneo</h1>
     <hr>
