--- a/indexhoja.html
+++ b/indexhoja.html
@@ -41,7 +41,7 @@
     <footer>
         <h3>Compañeros</h3>
         <ul>
-            <li><a href="#">Curriculum 1</a></li>
+            <li><a href="indexhoja.html">Curriculum 1</a></li>
             <li><a href="index.html">Curriculum Diego</a></li>
             <li><a href="#">Curriculum 3</a></li>
         </ul>
