--- a/curriculum_dieg.html
+++ b/curriculum_dieg.html
@@ -46,8 +46,11 @@
     <hr>
   </body>
   <footer>
-    <p>
-      pe
-    </p>
+    <h2>Curriculum de Compañeros</h2>
+    <ul>
+      <li><a href="curriculum_fede.html">Curriculum Federico</a></li>
+      <li><a href="curriculum_dieg.html">Curriculum Diego</a></li>
+      <li><a href="curriculum_joel.html">Curriculum Joel</a></li>
+  </ul>
   </footer>
 </html>
