--- a/curriculum_fede.html
+++ b/curriculum_fede.html
@@ -48,9 +48,9 @@
     <footer>
         <h3>Compañeros Curriculum</h3>
         <ul>
-            <li><a href="indexhoja.html">Curriculum Federico</a></li>
-            <li><a href="index.html">Curriculum Diego</a></li>
-            <li><a href="#">Curriculum Joel</a></li>
+            <li><a href="curriculum_fede.html">Curriculum Federico</a></li>
+            <li><a href="curriculum_dieg.html">Curriculum Diego</a></li>
+            <li><a href="curriculum_joel.html">Curriculum Joel</a></li>
         </ul>
     </footer>
 </body>
