--- a/curriculum_joel.html
+++ b/curriculum_joel.html
@@ -35,5 +35,13 @@
   <p> en esta seccion hablare sobre lo que pienso personalmente sobre la programacion , siento que es bastante necesaria considerando que el mundo de la tecnologia avanza bastante
   </p>
 </body>
+<footer>
+  <h2>Curriculum de Compañeros</h2>
+  <ul>
+    <li><a href="curriculum_fede.html">Curriculum Federico</a></li>
+    <li><a href="curriculum_dieg.html">Curriculum Diego</a></li>
+    <li><a href="curriculum_joel.html">Curriculum Joel</a></li>
+</ul>
+</footer>
 
 </HTML>
