--- a/curriculum_dieg.html
+++ b/curriculum_dieg.html
@@ -10,26 +10,26 @@
     <br>
     <img src ="">
     <hr>
-    <h1>Experiencias</h1>
+    <h2>Experiencias</h2>
     <p>
       He tenido experiencias en...
       <ul>
         <li>Desarrollo de proyecto software Java usando base de datos SQL</li>
+        <li>Proyectos comunitarios</li>
       </ul>
     </p>
     <hr>
-    <h1>Educacion</h1>
+    <h2>Educacion</h2>
     <p>
       He estudiado en:
       <ul>
         <li>Escuela Nuevo Belén</li>
         <li>Escuela El Buen Pastor Las Mañanitas en Bachillerato de Ciencias</li>
-        <li>Universidad Tecnológica de Panamá estudiando Desarrollo de Software en segundo año</li>
-        
+        <li>Universidad Tecnológica de Panamá estudiando Desarrollo de Software en segundo año</li>   
       </ul>
     </p>
     <hr>
-    <h1>Conocimientos</h1>
+    <h2>Conocimientos</h2>
     <ul>
       <li>Documentación general en Microsoft Word/Excel/PowerPoint</li>
       <li>Edición intermedia de imagenes en Photoshop</li>
@@ -37,12 +37,12 @@
       <li>Edición básica de videos en Sony Vegas</li>
     </ul>
     <hr>
-    <h1>Datos Generales</h1>
+    <h2>Datos Generales</h2>
     <p>
       Soy una persona yadda yadda.
     </p>
     <hr>
-    <h1>Miscelaneo</h1>
+    <h2>Miscelaneo</h2>
     <hr>
   </body>
   <footer>
