--- a/curriculum_dieg.html
+++ b/curriculum_dieg.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Diego Arroyo</h1>
     <br>
-    <img src ="">
+    <img src ="imgs/me.jpg">
     <hr>
     <h2>Experiencias</h2>
     <p>
@@ -39,7 +39,8 @@
     <hr>
     <h2>Datos Generales</h2>
     <p>
-      Soy una persona yadda yadda.
+      Edad: 19 años
+      Soy una persona generalmente calmada, paciente, motivado para aprender cosas y tomar el desafio que se me presente. Me gustan los videojuegos y dibujar.
     </p>
     <hr>
     <h2>Miscelaneo</h2>
