--- a/curriculum_dieg.html
+++ b/curriculum_dieg.html
@@ -3,13 +3,22 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
-    <title>Pagina</title>
+    <title>Curriculum | Diego Arroyo </title>
   </head>
   <body>
-    <h1>Diego Arroyo</h1>
+
+    <!-- Encabezado -->
+    <center>
+      <h1>Diego Arroyo</h1>
+        <h2>(futuro) Licensiado de Desarrollo de Software</h2>
     <br>
-    <img src ="imgs/me.jpg">
+    <img src ="imgs/me.png" height="13%" width="13%">
+    <p>a wise man once said <q>fart</q></p>
+    </center>
     <hr>
+
+    <!-- Sección de Información -->
+    <section>
     <h2>Experiencias</h2>
     <p>
       He tenido experiencias en...
@@ -21,7 +30,7 @@
     <hr>
     <h2>Educacion</h2>
     <p>
-      He estudiado en:
+      He estudiado en...
       <ul>
         <li>Escuela Nuevo Belén</li>
         <li>Escuela El Buen Pastor Las Mañanitas en Bachillerato de Ciencias</li>
@@ -45,13 +54,18 @@
     <hr>
     <h2>Miscelaneo</h2>
     <hr>
+  </section>
   </body>
+
   <footer>
-    <h2>Curriculum de Compañeros</h2>
+    <center><h2>Curriculum de Compañeros</h2>
     <ul>
+      </center>
       <li><a href="curriculum_fede.html">Curriculum Federico</a></li>
       <li><a href="curriculum_dieg.html">Curriculum Diego</a></li>
       <li><a href="curriculum_joel.html">Curriculum Joel</a></li>
   </ul>
+      </center>
   </footer>
+  
 </html>
