--- a/curriculum_dieg.html
+++ b/curriculum_dieg.html
@@ -58,14 +58,13 @@
   </body>
 
   <footer>
-    <center><h2>Curriculum de Compañeros</h2>
+    <h2>Curriculum de Compañeros</h2>
     <ul>
-      </center>
       <li><a href="curriculum_fede.html">Curriculum Federico</a></li>
       <li><a href="curriculum_dieg.html">Curriculum Diego</a></li>
       <li><a href="curriculum_joel.html">Curriculum Joel</a></li>
   </ul>
-      </center>
+      
   </footer>
-  
+
 </html>
