--- a/curriculum_fede.html
+++ b/curriculum_fede.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Federico Tejedor</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section>
@@ -10,17 +11,17 @@
         <hr>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxLkbtTa0kfmKizxJgqECQLdlt_xq1R2jEQQ&usqp=CAU" alt="Foto" width="10%">
         <hr>
-    <h2>Experiencia</h2>
+    <h2 class="centrear">Experiencia</h2>
     <ul>
         <li>Hacer aplicaciones en Java</li>
         <li>Conectar Base de datos SQL con PHP</li>
     </ul>
     <hr>
     <h2>Educación</h2>
-    <p>Universidad Tecnologica de Panamá-Lic.Desarrollo de Software</p>
+    <p class="separador">Universidad Tecnologica de Panamá-Lic.Desarrollo de Software</p>
     <p>Escuela Las Mañanitas El Buen Pastor</p>
     <hr>
-    <h2>Conocimientos</h2>
+    <h2 class="centrear">Conocimientos</h2>
     <ul>
         <li>Html: Estructuras web</li>
         <li>Css: Diseño basico de paginas Web</li>
@@ -30,14 +31,14 @@
         <li>PHP: Formularios,Login,aplicaciones Web</li>
     </ul>
     <hr>
-    <h2>Datos Generales</h2>
+    <h2 class="centrear">Datos Generales</h2>
     <ul>
         <li>Cédula:8-972-446</li>
         <li>Lugar de Residencia: Las Mañanitas</li>
         <li>Estudiante</li>
     </ul>
     <hr>
-    <h2>Atributos</h2>
+    <h2 class="centrear">Atributos</h2>
     <ul>
         <li>Honesto</li>
         <li>Guapo</li>
@@ -45,8 +46,11 @@
     </ul>
     <hr>
     </section>
+    <section class="fondito">
+
+    </section>
     <footer>
-        <h3>Compañeros Curriculum</h3>
+        <h3 class="centrear">Compañeros Curriculum</h3>
         <ul>
             <li><a href="curriculum_fede.html">Curriculum Federico</a></li>
             <li><a href="curriculum_dieg.html">Curriculum Diego</a></li>
